Project

General

Profile

Bug #20904

cluster [ERR] 2.e shard 2 missing 2:70b3bf12:::existing_4:head on lost-unfound-delete.yaml

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
Peering
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"2017-08-03 18:44:58.997542 osd.2 osd.2 172.21.15.176:6805/2924 18 : cluster [ERR] 2.e shard 2 missing 2:70b3bf12:::existing_4:head" in cluster log

/a/sage-2017-08-03_18:26:12-rados:singleton-master-distro-basic-smithi/1479710
/a/sage-2017-08-03_18:26:12-rados:singleton-master-distro-basic-smithi/1479713
rados:singleton/{all/lost-unfound-delete.yaml msgr-failures/few.yaml msgr/async.yaml objectstore/bluestore.yaml rados.yaml}

History

#1 Updated by Josh Durgin over 6 years ago

  • Category set to Peering
  • Status changed from 12 to In Progress
  • Assignee set to Josh Durgin

Think I found the problem, testing a fix.

#2 Updated by Josh Durgin over 6 years ago

  • Status changed from In Progress to Fix Under Review

#3 Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved

Also available in: Atom PDF